--- a/src/scss/signings.scss
+++ b/src/scss/signings.scss
@@ -19,11 +19,6 @@
     .alt-text {
       padding: 17px;
       margin-top: 2%;
-      color: $primary;
-
-      Link {
-        color: $primary;
-      }
     }
   }
 
